--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -106,3 +106,20 @@
   height: 100%;
   background-color: green;
 }
+
+
+
+.image-container {
+  width: 100%;
+  padding-top: 75%; /* Aspect ratio 4:3 */
+  position: relative;
+}
+
+.image-container img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
