--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,7 @@
 @import 'swiper/css/navigation';
 @import 'swiper/css/pagination';
 @import 'swiper/css/scrollbar';
+
 .main-menu .navbar-collapse li ul {
   transition: 0.3s all;
   display: unset;
@@ -10,18 +11,22 @@
   visibility: hidden;
   opacity: 0;
 }
+
 .main-menu .navbar-collapse .mobile-menu li ul {
   opacity: 1 !important;
   visibility: unset !important;
 }
-.main-menu .navbar-collapse li:hover > ul {
+
+.main-menu .navbar-collapse li:hover>ul {
   visibility: visible;
   opacity: 1;
   top: 100%;
 }
+
 .main-menu .navbar-collapse li ul li ul {
   top: -2% !important;
 }
+
 .thumb-images .nav-link {
   padding: 0;
 }
@@ -30,10 +35,12 @@
 .testimonial-three-dots .slick-dots .swiper-pagination-bullet-active {
   background: #55e6a5;
 }
+
 .testimonial-three-dots .slick-dots .swiper-pagination-bullet {
   margin-left: 7px;
   margin-right: 7px;
 }
+
 .slick-dots .swiper-pagination-bullet {
   position: relative;
   cursor: pointer;
@@ -44,26 +51,32 @@
   border-radius: 50%;
   background: rgba(255, 255, 255, 0.65);
 }
+
 .testimonial-two-part .slick-dots {
   display: flex !important;
   margin: 0 auto;
   text-align: center;
   margin-top: 100px;
 }
+
 .testimonial-two-part .slick-dots li.slick-active,
 .testimonial-three-dots .slick-dots li.slick-active {
   background: var(--ygency-primary-color);
 }
+
 .work-gallery-active .project-item {
   margin: 0;
   margin-bottom: 60px;
 }
+
 .swiper-pagination-bullet {
   margin: 0 10px !important;
 }
+
 .service-about-image {
   position: relative;
 }
+
 .testimonial-item {
   padding: 30px 0 0;
 }
@@ -91,6 +104,7 @@
   margin-top: 1.5rem;
   margin-bottom: 3rem;
 }
+
 /* .project-item {
   margin-left: 0 !important;
   margin-right: 0 !important;
@@ -111,7 +125,8 @@
 
 .image-container {
   width: 100%;
-  padding-top: 75%; /* Aspect ratio 4:3 */
+  padding-top: 75%;
+  /* Aspect ratio 4:3 */
   position: relative;
 }
 
@@ -122,4 +137,30 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  cursor: pointer;
+}
+
+
+.lb-canvas .lb-img {
+  width: 80vw;
+  height: 80vh;
+  margin-top: -20px;
+}
+
+
+.lb-container .lb-header {
+  position: relative !important;
+  top: 92.5vh;
+  justify-content: center !important;
+}
+
+@media (max-width: 600px) {
+  .lb-container .lb-header {
+    display: none !important;
+  }
+
+}
+
+.lb-container {
+  z-index: 5000000 !important;
 }
