--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -146,6 +146,11 @@
   /* height: 100%; */
   object-fit: contain;
   cursor: pointer;
+  border-radius: 2px;
+}
+
+.image-container img:hover {
+  outline: 3px solid #55e6a5;
 }
 
 
