--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -125,7 +125,7 @@
 
 .image-container {
   width: 100%;
-  padding-top: 75%;
+  padding-top: 60%;
   /* Aspect ratio 4:3 */
   position: relative;
 }
@@ -142,15 +142,20 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  /* height: 100%; */
-  object-fit: contain;
+  aspect-ratio: 2/1;
+  /* width: 100%; */
+  /* height: 400px; */
+  object-fit: cover;
   cursor: pointer;
   border-radius: 2px;
+  outline: 2px solid white;
 }
 
 .image-container img:hover {
-  outline: 3px solid #55e6a5;
+  /* transform: scale(1.2); */
+  transform: scale(1.05);
+  transition: transform 0.3s ease;
+  z-index: 100;
 }
 
 
